# claude-workflow-engine

./: .coveragerc  .dockerignore  .env.example  .pre-commit-config.yaml  ARCHITECTURE_QUICK_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE-REVIEW-PHASE3.md  COMPUTER_USE_IMPLEMENTATION.md  CONTEXT_ENRICHMENT_COMPLETE.md  CRITICAL_ISSUES_FOUND.md  CUserstechd.claudeprojectsC--Users-techd-Documents-workspace-spring-tool-suite-4-4-27-0-new-claude-insightmemoryMEMORY.md  DOCSTRING_COMPLETION_SUMMARY.md  DOCSTRING_IMPLEMENTATION_PLAN.md  Dockerfile  EXECUTION_DASHBOARD.md  EXECUTION_INDEX.md  GAP_ANALYSIS_VISUAL.md  HYBRID_INFERENCE_SETUP.md  IMPLEMENTATION-CHECKLIST.md  IMPLEMENTATION_PHASES.md  IMPLEMENTATION_PROGRESS.md  LANGGRAPH-COMPLETION-SUMMARY.md  LANGGRAPH-ENGINE.md  MANIFEST.in  MULTI_TECH_GUIDE.md  Makefile  PHASE1-COMPLETION.md  PHASE2-COMPLETION.md  PHASE2_COMPLETE_GUIDE.md  PHASE3-COMPLETION.md  PHASE3-TESTING-GUIDE.md  PHASE3_EXECUTION_INTEGRATION_COMPLETE.md  PHASE4-TESTING-REPORT.md  PHASE_2_3_SPECS.md  PHASE_4_FINAL_REPORT.md  POLICY_CHAINING_AUDIT_REPORT.md  README.md  READY_FOR_EXECUTION.md  SKILL_CONTEXT_ENHANCEMENT_PLAN.md  (+30 more)
.claude/: settings.local.json
.claude-graph/: graph-analysis.json
docs/: 00_START_HERE.md  01-common-standards.md  02-backend-standards.md  03-microservices-standards.md  04-frontend-standards.md  06-typescript-standards.md  07-go-standards.md  08-rust-standards.md  11-documentation-files.md  12-docstrings-only.md  13-spring-cloud-infrastructure.md  14-entity-design-patterns.md  15-dto-form-separation.md  17-api-response-wrapper.md  19-exception-handling-hierarchy.md  20-inter-service-communication.md  21-caching-strategy.md  24-constants-organization.md  27-centralized-logging.md  30-maven-build-conventions.md  32-repository-conventions.md  35-positive-testing-standards.md  36-negative-testing-standards.md  37-edge-case-testing-standards.md  38-test-mocking-strategy.md  39-cross-cutting-test-patterns.md  41-testing-standards-python-fastapi.md  42-testing-standards-nodejs-express.md  43-testing-standards-go.md  44-srs-lifecycle.md  45-uml-diagram-lifecycle.md  ADR-002-call-graph-intelligence.md  ADR-003-runtime-verification-decorator.md  ADR-005-no-llm-in-verifier.md  ARCHITECTURE_QUICK_SUMMARY.md  ARCHITECTURE_REVIEW.md  AUTO-FIX-ENFORCEMENT-SUMMARY.md  AUTO-SYNC-POLICIES.md  CHANGELOG-SYSTEM.md  CHANGELOG.md  (+83 more)
drawio/: activity-diagram.drawio  class-diagram.drawio  communication-diagram.drawio  component-diagram.drawio  composite-diagram.drawio  deployment-diagram.drawio  interaction-diagram.drawio  object-diagram.drawio  (+4 more)
(+909 files in other folders)
