[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "claude-workflow-engine"
dynamic = ["version"]
description = "LangGraph-based 3-level orchestration pipeline for automating Claude Code development workflows with call graph intelligence, template fast-path, and multi-provider LLM inference."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Piyush Makhija" }]
keywords = ["langgraph", "claude", "orchestration", "workflow", "llm", "github-automation", "call-graph", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "langgraph>=0.2.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "PyGithub>=2.1.1,<3.0.0",
    "GitPython>=3.1.40,<4.0.0",
    "networkx>=3.1,<4.0.0",
    "lizard>=1.17.0,<2.0.0",
    "anthropic>=0.50.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "langgraph-checkpoint-sqlite>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "psutil>=5.9.8,<6.0.0",
    "loguru>=0.7.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "watchdog>=3.0.0,<4.0.0",
    "mcp>=1.0.0,<2.0.0",
    "pydantic>=2.0,<3.0.0",
    "aiofiles>=23.0,<24.0.0",
]

[project.urls]
Homepage = "https://github.com/techdeveloper-org/claude-workflow-engine"
Repository = "https://github.com/techdeveloper-org/claude-workflow-engine"

[tool.hatch.version]
path = "langgraph_engine/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["langgraph_engine", "src/mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/langgraph_engine",
    "/src/mcp",
    "/scripts",
    "/policies",
    "/rules",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/VERSION",
    "/requirements.txt",
]
exclude = [
    "/uml",
    "/drawio",
    "/docs",
    "**/__pycache__",
    "**/*.pyc",
    ".github",
    ".git",
    ".venv",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (select via: -m integration)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]
